# Segmentangling

./: .gitignore  .gitmodules  README.md
ContourTree/: ContourTree.cpp  ContourTree.hpp  ContourTree.pro  ContourTreeData.cpp  ContourTreeData.hpp  DisjointSets.hpp  Grid3D.cpp  Grid3D.hpp  Grid3DShort.cpp  Grid3DShort.hpp  HyperVolume.cpp  HyperVolume.hpp  ImageData.cpp  ImageData.hpp  Logger.cpp  Logger.hpp  MergeTree.cpp  MergeTree.hpp  Persistence.cpp  Persistence.hpp  ScalarFunction.hpp  SimFunction.hpp  SimplifyCT.cpp  SimplifyCT.hpp  TopologicalFeatures.cpp  TopologicalFeatures.hpp  TriMesh.cpp  TriMesh.hpp  constants.h  main.cpp  preprocessing.cpp  preprocessing.hpp  test.hpp
FreeImage/: CMakeLists.txt  FreeImage.2017.vcxproj
FreeImage/Source/: CMakeLists.txt
FreeImage/Source/FreeImageLib/: FreeImageLib.2017.vcxproj
FreeImage/Source/LibJPEG/: LibJPEG.2017.vcxproj
FreeImage/Source/LibJXR/: LibJXR.2017.vcxproj
FreeImage/Source/LibOpenJPEG/: LibOpenJPEG.2017.vcxproj
FreeImage/Source/LibPNG/: LibPNG.2017.vcxproj
FreeImage/Source/LibRawLite/: LibRawLite.2017.vcxproj
FreeImage/Source/LibTIFF4/: LibTIFF4.2017.vcxproj
FreeImage/Source/LibWebP/: LibWebP.2017.vcxproj
FreeImage/Source/ZLib/: ZLib.2017.vcxproj
FreeImage/Wrapper/: CMakeLists.txt
FreeImage/Wrapper/FreeImagePlus/: FreeImagePlus.2017.vcxproj
ImageTest/: ImageTest.pro  main.cpp
Inviwo/modules/segmentangling/: CMakeLists.txt  common.h  depends.cmake  segmentanglingmodule.cpp  segmentanglingmodule.h  segmentanglingmoduledefine.h
Inviwo/modules/segmentangling/ext/: quartet.cpp
Inviwo/modules/segmentangling/ext/qhull/lib/: qhullcpp.lib  qhullstatic.lib  qhullstatic_r.lib  qhullstatic_rd.lib
Inviwo/modules/segmentangling/glsl/: common.hglsl  contourfilter.frag  segmentationraycaster.frag  volumecollectiongenerator.frag  volumesliceoverlay.frag
Inviwo/modules/segmentangling/processors/: contourfilter.cpp  contourfilter.h  datapreprocessor.cpp  datapreprocessor.h  loadcontourtree.cpp  loadcontourtree.h  segmentationidraycaster.cpp  segmentationidraycaster.h  selector.cpp  selector.h  straightener.cpp  straightener.h  tetmesher.cpp  tetmesher.h  topoppparameterer.cpp  topoppparameterer.h  volumecollectiongenerator.cpp  volumecollectiongenerator.h  volumeexportgenerator.cpp  volumeexportgenerator.h  volumeraycasteroverlay.cpp  volumeraycasteroverlay.h  volumesliceoverlay.cpp  volumesliceoverlay.h  volumestopper.cpp  volumestopper.h  yixinloader.cpp  yixinloader.h
Inviwo/modules/segmentangling/util/: constraintsstate.cpp  constraintsstate.h  defer.h  fresh_new_utils.cpp  fresh_new_utils.h
Inviwo/modules/segmentangling/workspace/: application-256.inv  application-old.inv  application.inv  application_first_data.inv  application_second_data.inv  application_third_data.inv  application_toy_data.inv  workflow - Copy.inv  workflow.inv
Inviwo/modules/segmentangling/workspace/2018/: Sternopygus_arenatus.inv  initial - Copy.inv  initial.inv  snakey.inv
Inviwo/modules/segmentangling/workspace/paper/: convexhull-figure.inv  features-figure.inv  subfeatures-figure.inv  teaser-2-figure.inv  usecase-1-figure-1.inv  usecase-1-figure-2.inv  usecase-2-figure-1.inv  usecase-2-figure-2.inv  usecase-2-figure.inv  usecase-3-figure-1.inv  usecase-3-figure-2.inv  usecase1-figure.inv  video-1.inv  video.inv  workspace-figure.inv
Workflow/: Segmentangling.md  create_dat_file.py
